# Lingzhi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  pyproject.toml
app/: .gitignore  analysis_options.yaml  pubspec.yaml
app/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
app/android/app/: build.gradle.kts
app/ios/: Podfile  exportOptions.plist
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
docs/: API_INTERFACE_DOCUMENTATION.md  API_INTERFACE_JSON_STRUCTURE.md  SERVER_CONFIG_GUIDE.md  opus_simulator_arm64_fix.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
server/: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  requirements.txt  start.sh
server/api/: config.py  error.py  headers.py  health.py  webrtc.py  webrtc_cleanup.py  websocket.py
server/config/: .server_config_example.yaml  logger.py  manage_api_client.py  private_config.py  server_config.py  version.yaml
server/config/template/: intent_prompt_template.md  system_prompt_template.md
server/core/: global_services.py  version.py
server/core/adapters/: __init__.py  websocket_adapter.py  websocket_status.py
server/core/connection/: __init__.py  auth_code_gen.py  auth_middleware.py  websocket_connector.py
server/core/container/: service_container.py  service_definitions.py
server/core/context/: event_bus.py  event_cancel_manager.py  event_dispatcher.py  event_types.py
server/core/events/: audio_bytes_parse_handler.py  audio_listen_handler.py  (+5 more)
(+282 files in other folders)
